Fix ambiguous white space for items

--- a/css/sass/_custom.scss
+++ b/css/sass/_custom.scss
@@ -23,3 +23,14 @@
 #credit-header {
   margin-bottom: .25em;
 }
+
+// Fix styles
+div.element-set h2 {
+  margin-bottom:6px;
+  padding-bottom:0;
+}
+
+div.element h3 {
+  margin-bottom:4px;
+  padding-bottom:0;
+}
